--- a/HalaHair/HalaHair.csproj
+++ b/HalaHair/HalaHair.csproj
@@ -1,22 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Middleware\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="Repository\Implementaion\" />
-    <Folder Include="Repository\Interface\" />
-    <Folder Include="Service\Implementaion\" />
-    <Folder Include="Service\Interface\" />
   </ItemGroup>
 
 </Project>
